--- a/android/app/src/main/res/drawable/app_shortcut.xml
+++ b/android/app/src/main/res/drawable/app_shortcut.xml
@@ -1,11 +1,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M17,18H7V6h10v1h2V3c0,-1.1 -0.9,-2 -2,-2H7C5.9,1 5,1.9 5,3v18c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2v-4h-2V18z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M20.38,9.62l0.62,1.38l0.62,-1.38l1.38,-0.62l-1.38,-0.62l-0.62,-1.38l-0.62,1.38l-1.38,0.62z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M16,8l-1.25,2.75l-2.75,1.25l2.75,1.25l1.25,2.75l1.25,-2.75l2.75,-1.25l-2.75,-1.25z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M21,13l-0.62,1.38l-1.38,0.62l1.38,0.62l0.62,1.38l0.62,-1.38l1.38,-0.62l-1.38,-0.62z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M22,12v6c0,1.1 -0.9,2 -2,2H4c-1.1,0 -2,-0.9 -2,-2V6c0,-1.1 0.9,-2 2,-2h10l0,2H4v12h16v-6H22zM22,7c0,-1.66 -1.34,-3 -3,-3c-1.66,0 -3,1.34 -3,3s1.34,3 3,3C20.66,10 22,8.66 22,7zM11.47,12.12l-2.83,2.83l1.41,1.41l2.83,-2.83L15,15.66V10H9.34L11.47,12.12z"/>
     
 </vector>
