--- a/android/app/src/main/res/drawable/app_shortcut.xml
+++ b/android/app/src/main/res/drawable/app_shortcut.xml
@@ -1,5 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M22,12v6c0,1.1 -0.9,2 -2,2H4c-1.1,0 -2,-0.9 -2,-2V6c0,-1.1 0.9,-2 2,-2h10l0,2H4v12h16v-6H22zM22,7c0,-1.66 -1.34,-3 -3,-3c-1.66,0 -3,1.34 -3,3s1.34,3 3,3C20.66,10 22,8.66 22,7zM11.47,12.12l-2.83,2.83l1.41,1.41l2.83,-2.83L15,15.66V10H9.34L11.47,12.12z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M19,19H5V5h7V3H5c-1.11,0 -2,0.9 -2,2v14c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2v-7h-2v7zM14,3v2h3.59l-9.83,9.83 1.41,1.41L19,6.41V10h2V3h-7z"/>
     
 </vector>
